<resources>
    <string name="app_name">Pokemon Info</string>
    <string name="pokemon_list_activity_title">Pokemon</string>
    <string name="name">Name</string>
    <string name="base_experience">Base experience</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="moves">Moves</string>
    <string name="moves_title">Moves</string>
</resources>
