<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textView_name_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_name_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_name_left"
        app:layout_constraintStart_toEndOf="@id/textView_name_left"
        app:layout_constraintTop_toTopOf="@id/textView_name_left"
        tools:text="Bulbasaur" />

    <View
        android:id="@+id/divider_name"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_name_left" />

    <TextView
        android:id="@+id/textView_base_xp_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/base_experience"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_name" />

    <TextView
        android:id="@+id/textView_base_xp_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_base_xp_left"
        app:layout_constraintStart_toEndOf="@id/textView_base_xp_left"
        app:layout_constraintTop_toTopOf="@id/textView_base_xp_left"
        tools:text="64" />

    <View
        android:id="@+id/divider_base_xp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_base_xp_left" />

    <TextView
        android:id="@+id/textView_height_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/height"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_base_xp" />

    <TextView
        android:id="@+id/textView_height_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_height_left"
        app:layout_constraintStart_toEndOf="@id/textView_height_left"
        app:layout_constraintTop_toTopOf="@id/textView_height_left"
        tools:text="7" />

    <View
        android:id="@+id/divider_height"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_height_left" />

    <TextView
        android:id="@+id/textView_weight_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/weight"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_height" />

    <TextView
        android:id="@+id/textView_weight_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="@id/textView_weight_left"
        app:layout_constraintStart_toEndOf="@id/textView_weight_left"
        app:layout_constraintTop_toTopOf="@id/textView_weight_left"
        tools:text="69" />

    <View
        android:id="@+id/divider_weight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black_divider"
        app:layout_constraintTop_toBottomOf="@id/textView_weight_left" />

    <Button
        android:id="@+id/moves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/moves"
        app:layout_constraintTop_toBottomOf="@id/divider_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>